--- a/login.css
+++ b/login.css
@@ -5,7 +5,42 @@
     padding: 0;
 }
 
-.right{
+section{
+    background-color: rgb(88, 60, 190);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 25px;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    height: 60vh;
+    width: 60vw;
+    color: white;
+}
 
+#email{
+    padding: 10px;
+    border-radius: 7px;
+    border: 0;
+    margin: 10px 5px 5px 0px;
+}
+
+#key1{
+    border: 0px;
+    border-radius: 7px;
+    padding: 10px;
+    margin: 5px 5px 5px 0px;
+}
+
+.right{
+    text-align: center;
+    width: 30%;
+}
+
+.left{
+    width: 70%;
 }
 
